--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,14 +6,20 @@
     ".": {
       "release-type": "simple",
       "package-name": "maven-monorepo-example",
+      "component": "core",
       "extra-files": [
         "version.txt",
-        "pom.xml"
+        "pom.xml",
+        "security/version.txt",
+        "security/pom.xml",
+        "services/service1/pom.xml",
+        "services/service1/version.txt"
       ]
     },
     "security": {
       "release-type": "simple",
       "package-name": "security",
+      "component": "core",
       "extra-files": [
         "security/version.txt",
         "security/pom.xml"
@@ -22,6 +28,7 @@
     "services/service1": {
       "release-type": "simple",
       "package-name": "service1",
+      "component": "core",
       "extra-files": [
         "services/service1/pom.xml",
         "services/service1/version.txt"
