--- a/release-please-config.json
+++ b/release-please-config.json
@@ -10,9 +10,27 @@
       "include-v-in-tag": true,
       "extra-files": [
         "version.txt",
-        "pom.xml",
+        "pom.xml"
+      ]
+    },
+    "security": {
+      "release-type": "simple",
+      "package-name": "security",
+      "component": "core",
+      "separate-pull-requests": false,
+      "include-v-in-tag": true,
+      "extra-files": [
         "security/version.txt",
-        "security/pom.xml",
+        "security/pom.xml"
+      ]
+    },
+    "services/service1": {
+      "release-type": "simple",
+      "package-name": "service1",
+      "component": "core",
+      "separate-pull-requests": false,
+      "include-v-in-tag": true,
+      "extra-files": [
         "services/service1/version.txt",
         "services/service1/pom.xml"
       ]
