--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -7,12 +7,35 @@ on:
 permissions:
   contents: write
   pull-requests: write
+  issues: write
 
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
       - uses: googleapis/release-please-action@v4
+        id: release
         with:
           # Use GitHub token for authentication
           token: ${{ secrets.GITHUB_TOKEN }}
+      
+      # Manual approval step - only runs when releases are created
+      - name: Wait for Release Approval
+        if: ${{ steps.release.outputs.releases_created }}
+        uses: trstringer/manual-approval@v1
+        with:
+          secret: ${{ secrets.GITHUB_TOKEN }}
+          approvers: shekhar669
+          minimum-approvals: 1
+          issue-title: "Release Approval Required: ${{ steps.release.outputs.tag_name }}"
+          issue-body: |
+            ## Release Approval Request
+            
+            **Tag:** ${{ steps.release.outputs.tag_name }}
+            **Release Created:** Yes
+            
+            Please review the release notes and approve by commenting **approved** on this issue.
+            To deny, comment **denied**.
+            
+            [View Release PR](https://github.com/${{ github.repository }}/releases)
+          exclude-workflow-initiator-as-approver: false
