--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,36 +3,14 @@
   "include-component-in-tag": true,
   "packages": {
     ".": {
-      "release-type": "simple",
+      "release-type": "maven",
       "package-name": "core",
       "component": "core",
-      "separate-pull-requests": false,
       "include-v-in-tag": true,
       "extra-files": [
         "version.txt",
-        "pom.xml"
-      ]
-    },
-    "security": {
-      "release-type": "simple",
-      "package-name": "security",
-      "component": "core",
-      "separate-pull-requests": false,
-      "include-v-in-tag": true,
-      "extra-files": [
         "security/version.txt",
-        "security/pom.xml"
-      ]
-    },
-    "services/service1": {
-      "release-type": "simple",
-      "package-name": "service1",
-      "component": "core",
-      "separate-pull-requests": false,
-      "include-v-in-tag": true,
-      "extra-files": [
-        "services/service1/version.txt",
-        "services/service1/pom.xml"
+        "services/service1/version.txt"
       ]
     },
     "services/service2": {
