--- a/services/service1/pom.xml
+++ b/services/service1/pom.xml
@@ -3,9 +3,15 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.example</groupId>
+  <parent>
+    <groupId>org.example</groupId>
+    <artifactId>maven-monorepo-example</artifactId>
+    <version>0.3.0</version>
+    <relativePath>../../pom.xml</relativePath>
+  </parent>
+
   <artifactId>service1</artifactId>
-  <version>0.3.0</version>
+  <!-- Version inherited from parent -->
 
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
