fix: use simple release-type to avoid SNAPSHOT versions

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,12 +3,15 @@
   "include-component-in-tag": true,
   "packages": {
     ".": {
-      "release-type": "maven",
+      "release-type": "simple",
       "package-name": "core",
       "component": "core",
       "include-v-in-tag": true,
       "extra-files": [
         "version.txt",
+        "pom.xml",
+        "security/pom.xml",
+        "services/service1/pom.xml",
         "security/version.txt",
         "services/service1/version.txt"
       ]
