--- a/services/service1/pom.xml
+++ b/services/service1/pom.xml
@@ -18,7 +18,6 @@
     <maven.compiler.target>17</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring-boot.version>3.0.1</spring-boot.version>
-    <security.version>0.1.0</security.version>
   </properties>
 
   <dependencyManagement>
@@ -33,7 +32,7 @@
       <dependency>
         <groupId>org.example</groupId>
         <artifactId>security</artifactId>
-        <version>${security.version}</version>
+        <version>${project.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
